--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,12 +1,20 @@
-.home-wrapper {
-  position: relative;
+.home-Wrapper {
+  padding-top: 13rem;
+  background-image: url("/images/background.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
   width: 100%;
+  overflow: hidden;
 }
 
-.home-img {
-  height: 100vh;
-  width: 100%;
+.intro-h1 {
+  font-size: 5.7rem;
+  font-weight: normal;
+  padding-bottom: 2rem;
+}
+
+.intro-paragraph {
+  font-size: 2.9rem;
+  font-weight: 200;
 }
