--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,18 +1,36 @@
 .home-Wrapper {
-  padding-top: 13rem;
-  background-image: url("/images/background.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
   width: 100%;
   overflow: hidden;
+  position: relative;
   --article-load-delay: 700ms;
 }
 
+.home-container {
+  font-family: "Playfair Display", serif;
+  font-weight: 500;
+  min-height: 31.25rem;
+  align-items: center;
+  height: 75%;
+  width: 90%;
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+  display: flex;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  background-color: #fe6969;
+}
+
 .intro-h1 {
-  font-size: 5.7rem;
-  font-weight: normal;
-  padding-bottom: 2rem;
+  font-size: 2.5rem;
+  color: #3a3a3a;
+  font-weight: bold;
+  margin-top: 0;
   animation: article-load 700ms ease-in var(--article-load-delay);
   animation-fill-mode: forwards;
   transform: translateY(-1.25rem);
@@ -20,8 +38,9 @@
 }
 
 .intro-paragraph {
-  font-size: 2.9rem;
-  font-weight: 200;
+  font-size: 5.625rem;
+  color: #fff;
+  font-weight: 800;
   animation: paragraph-load 700ms ease-in
     calc(var(--article-load-delay) + 300ms);
   animation-fill-mode: forwards;
