--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,7 +1,10 @@
 .about-Wrapper {
   font-family: "Playfair Display", serif;
   color: #3a3a3a;
+  background-color: rgb(255, 255, 255);
   text-align: center;
+  position: relative;
+  z-index: 5;
 }
 
 .about-H1 {
@@ -19,9 +22,9 @@
   width: 5%;
   background-color: #ff6666;
   position: absolute;
-  bottom: -1.9em;
+  bottom: -3em;
   left: 50%;
-  transform: translate(-105%);
+  transform: translate(-120%);
 }
 
 .full-stop {
