--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,10 +1,12 @@
 .home-Wrapper {
   background-size: cover;
   background-position: center;
+  background-color: white;
   height: 100vh;
   width: 100%;
   overflow: hidden;
   position: relative;
+  z-index: 5;
   --article-load-delay: 700ms;
 }
 
@@ -19,7 +21,7 @@
   text-align: center;
   position: absolute;
   display: flex;
-  top: 50%;
+  top: 44%;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
@@ -31,7 +33,7 @@
   color: #3a3a3a;
   font-weight: bold;
   margin-top: 0;
-  animation: article-load 700ms ease-in var(--article-load-delay);
+  animation: article-load 500ms ease-in var(--article-load-delay);
   animation-fill-mode: forwards;
   transform: translateY(-1.25rem);
   opacity: 0;
@@ -41,8 +43,8 @@
   font-size: 5.625rem;
   color: #fff;
   font-weight: 800;
-  animation: paragraph-load 700ms ease-in
-    calc(var(--article-load-delay) + 300ms);
+  animation: paragraph-load 500ms ease-in
+    calc(var(--article-load-delay) + 200ms);
   animation-fill-mode: forwards;
   transform: translateY(-1.25rem);
   opacity: 0;
