--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -3,7 +3,7 @@
   min-height: 100vh;
   margin: 0 auto;
   padding-bottom: 0;
-  padding-top: 5rem;
+  padding-top: 0;
   position: relative;
   background-color: white;
   z-index: 5;
@@ -29,7 +29,7 @@
 .card-container {
   margin: 0 auto !important;
   padding: 0 !important;
-  width: 83%;
+  width: 80%;
   height: 100%;
 }
 
@@ -59,7 +59,7 @@
 .content-image {
   height: 27rem;
   width: 100%;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .content:hover .content-overlay {
