--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -1,6 +1,6 @@
 .skills-Wrapper {
   height: 60vh;
-  padding-top: 3rem;
+
   background-color: white;
   position: relative;
   font-family: "Playfair Display", serif;
@@ -31,11 +31,6 @@
   font-weight: bold;
 }
 
-.parallax-outer {
-  height: 100%;
-  width: 100%;
-}
-
 .parallax-inner {
   height: 100%;
   width: 100%;
@@ -43,66 +38,85 @@
 
 .parallax-inner {
   position: relative;
+  display: fixed;
   color: #ff6666;
   opacity: 0.5;
 }
-.javascript {
-  position: absolute;
-  z-index: -1;
-  top: 5%;
-  left: 0;
-  right: 0;
-  font-weight: 400;
-  top: 3.125;
-  left: 90%;
-  font-size: 3.2em;
+
+.parallax {
+  position: relative;
+  margin-top: 0;
+  padding-top: 0;
+  height: 80%;
+  top: 40%;
 }
 
 .react {
-  position: absolute;
-  z-index: -1;
-  top: 30%;
-  left: 35%;
+  position: relative;
+  top: 15%;
+  left: 45%;
   font-size: 2em;
+}
+
+.github {
+  position: absolute;
+  margin: 0;
+  top: 0%;
+  left: 25%;
+  font-size: 2.5em;
+}
+
+.bootstrap {
+  position: relative;
+  top: 5%;
+  left: 65%;
+  font-size: 2.7em;
+}
+
+.javascript {
+  position: absolute;
+  top: 5%;
+  left: 85%;
+  font-weight: 400;
+  top: 3.125;
+  font-size: 3.2em;
 }
 
 .html {
   position: absolute;
-  z-index: -1;
+
+  top: 62%;
+  left: 63%;
+  font-size: 2em;
+}
+
+.mysql {
+  position: absolute;
+
   font-weight: 400;
-  top: 70%;
-  left: 85%;
+  top: 67%;
+  left: 83%;
   font-size: 2.9em;
 }
 
 .css {
   position: absolute;
-  z-index: -1;
   top: 60%;
-  left: 5%;
+  left: 10%;
   font-size: 2.7em;
 }
 
 .mongo {
   position: absolute;
-  z-index: -1;
-  top: 70%;
-  left: 25%;
+  top: 60%;
+  left: 30%;
   font-size: 1.9em;
-}
-
-.bootstrap {
-  position: absolute;
-  z-index: -1;
-  top: 20%;
-  left: 65%;
-  font-size: 2.7em;
 }
 
 .node {
   position: absolute;
   margin: 0;
-  z-index: -1;
+
   top: 75%;
   left: 45%;
   font-size: 2.5em;
@@ -111,7 +125,7 @@
 .z {
   position: absolute;
   margin: 0;
-  z-index: -1;
+
   font-weight: 400;
   top: 50%;
   left: 75%;
@@ -121,20 +135,11 @@
 .x {
   position: absolute;
   margin: 0;
-  z-index: -1;
+
   font-weight: 400;
   top: 30%;
   left: 15%;
   font-size: 1.2rem;
-}
-
-.github {
-  position: absolute;
-  margin: 0;
-  z-index: -1;
-  top: 10%;
-  left: 25%;
-  font-size: 2.5em;
 }
 
 @media (max-width: 600px) {
