--- a/src/components/BurgerMenu/burgerMenu.css
+++ b/src/components/BurgerMenu/burgerMenu.css
@@ -1,5 +1,6 @@
 nav {
   justify-content: space-between;
+  font-family: "Poppins", sans-serif;
   background-color: #fff;
   height: 4rem;
   z-index: 10;
@@ -25,7 +26,7 @@ nav {
 
 .hamBurgerMenu {
   cursor: pointer;
-  font-size: 2.2rem;
+  font-size: 2.5rem;
   color: #3a3a3a;
   z-index: 20;
 }
@@ -37,18 +38,23 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: end;
-  display: block;
-  text-align: right;
   z-index: 15;
 }
 
 .menu-items {
   margin-right: 5%;
-  margin-top: 7rem;
+  margin-top: 5rem;
 }
 
+.contact-form-container {
+  margin-top: 3.8rem;
+}
+.menu-ul-container {
+  display: flex;
+  justify-content: end;
+  display: block;
+  text-align: right;
+}
 .menu-ul {
   list-style: none;
 }
@@ -58,12 +64,12 @@ nav {
 }
 
 .menu-ul > li > a:hover {
-  color: #ff6666 !important;
+  color: #6e77f4 !important;
 }
 
 .menu-link {
   font-size: 3.5rem;
-  font-weight: bold;
+  font-weight: 600;
   color: #3a3a3a;
   text-decoration: none;
 }
