--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -2,8 +2,7 @@
   font-family: "Playfair Display", serif;
   min-height: 100vh;
   margin: 0 auto;
-  padding-bottom: 0;
-  padding-top: 0;
+  padding: 0;
   position: relative;
   background-color: white;
   z-index: 5;
@@ -11,7 +10,7 @@
 
 .projects-header {
   font-size: 2.5rem;
-  margin: auto;
+  margin: 5rem auto 2rem auto;
   text-align: center;
   color: #3a3a3a;
   font-weight: bold;
@@ -19,8 +18,7 @@
 
 .projects-para {
   text-align: center;
-  margin-top: 3rem;
-  margin-bottom: 4rem;
+  margin: 3rem auto 8rem auto;
   padding: auto;
   font-size: 1.5rem;
   font-weight: 300;
@@ -29,7 +27,7 @@
 .card-container {
   margin: 0 auto !important;
   padding: 0 !important;
-  width: 80%;
+  width: 85%;
   height: 100%;
 }
 
@@ -57,7 +55,7 @@
 }
 
 .content-image {
-  height: 27rem;
+  height: 35rem;
   width: 100%;
   object-fit: cover;
 }
