--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,6 +1,6 @@
 .about-Wrapper {
   font-family: "Playfair Display", serif;
-  color: #3a3a3a;
+  color: var(--color-secondary);
   background-color: rgb(255, 255, 255);
   text-align: center;
   position: relative;
@@ -18,7 +18,7 @@
 
 .full-stop {
   font-size: 3.5rem;
-  color: #ff6666;
+  color: var(--color-primary);
 }
 
 .about-info-text {
