--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -48,6 +48,20 @@ footer {
   display: flex;
   align-items: center;
 }
+
+@media (max-width: 1024px) {
+  .footer-details {
+    display: inline;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 1024px) {
+  .column {
+    margin: 0.5rem auto 1.2rem auto;
+  }
+}
+
 .footer-h2 {
   color: #fff;
   margin-bottom: 0;
