--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -2,6 +2,7 @@
   background-size: cover;
   background-position: center;
   background-color: white;
+  margin-top: 3rem !important;
   height: 100vh;
   width: 100%;
   overflow: hidden;
@@ -25,12 +26,32 @@
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
-  background-color: #fe6969;
+  background-color: var(--color-primary);
 }
 
+.backgrund-img {
+  width: 100%;
+  height: 110%;
+  position: absolute;
+  top: -10;
+  left: 0;
+  object-fit: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  opacity: 0.08;
+}
+
+@media (max-width: 700px) {
+  .h1-container {
+    word-break: break-word;
+  }
+}
+
+/* Header & Paragraph */
+
 .intro-h1 {
-  font-size: 2.5rem;
-  color: #3a3a3a;
+  font-size: 2.7rem;
+  color: var(--color-secondary);
   font-weight: bold;
   margin-top: 0;
   animation: article-load 500ms ease-in var(--article-load-delay);
@@ -40,7 +61,7 @@
 }
 
 .intro-paragraph {
-  font-size: 5.625rem;
+  font-size: 5.9rem;
   color: #fff;
   font-weight: 800;
   animation: paragraph-load 500ms ease-in
@@ -48,6 +69,12 @@
   animation-fill-mode: forwards;
   transform: translateY(-1.25rem);
   opacity: 0;
+}
+
+@media (max-width: 700px) {
+  .intro-paragraph {
+    font-size: 14vw;
+  }
 }
 
 @keyframes article-load {
