--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,5 +1,5 @@
 .about-Wrapper {
-  font-family: "Playfair Display", serif;
+  font-family: "Montserrat";
   color: var(--color-secondary);
   background-color: rgb(255, 255, 255);
   text-align: center;
@@ -9,22 +9,23 @@
 
 .about-H1 {
   margin-bottom: 2rem;
-  font-size: 3.2rem;
-  font-weight: 500;
+  font-size: 4.7rem;
+  font-weight: 800;
   text-align: center;
   padding-top: 1rem;
   padding-bottom: 0.7rem;
 }
 
 .full-stop {
-  font-size: 3.5rem;
+  padding: 0.5rem;
+  font-size: 4.7rem;
   color: var(--color-primary);
 }
 
 .about-info-text {
-  width: 70%;
+  width: 75%;
   margin: auto;
-  font-size: 1.5rem;
+  font-size: 2rem;
   padding-top: 1.4rem;
   font-weight: 200;
 }
