--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -4,7 +4,7 @@ body {
 }
 
 .skills-Wrapper {
-  font-family: "Playfair Display", serif;
+  font-family: "Montserrat";
   height: 60vh;
   position: relative;
   background-color: #fff;
@@ -12,8 +12,8 @@ body {
 }
 
 .skills-Header {
-  font-size: 3.2rem;
-  font-weight: 500;
+  font-size: 4rem;
+  font-weight: 800;
   color: var(--color-secondary);
   position: absolute;
   top: 50%;
@@ -32,7 +32,7 @@ body {
   position: absolute;
   top: 25%;
   left: 40%;
-  font-size: 2.3em;
+  font-size: 2.6em;
 }
 
 .github {
@@ -41,7 +41,7 @@ body {
   margin: 0;
   top: 15%;
   left: 25%;
-  font-size: 2.5em;
+  font-size: 2.8em;
 }
 
 .bootstrap {
@@ -49,7 +49,7 @@ body {
   position: absolute;
   top: 13%;
   left: 65%;
-  font-size: 2.7em;
+  font-size: 3em;
 }
 
 .javascript {
@@ -59,7 +59,7 @@ body {
   left: 82%;
   font-weight: 400;
   top: 3.125;
-  font-size: 3.2em;
+  font-size: 3.5em;
 }
 
 .css {
@@ -67,7 +67,7 @@ body {
   position: absolute;
   top: 60%;
   left: 10%;
-  font-size: 2.7em;
+  font-size: 3em;
 }
 
 .mongo {
@@ -75,7 +75,7 @@ body {
   position: absolute;
   top: 60%;
   left: 30%;
-  font-size: 1.9em;
+  font-size: 2.2em;
 }
 
 .node {
@@ -84,7 +84,7 @@ body {
   margin: 0;
   top: 75%;
   left: 45%;
-  font-size: 2.5em;
+  font-size: 2.8em;
 }
 
 .html {
@@ -92,7 +92,7 @@ body {
   position: absolute;
   top: 62%;
   left: 63%;
-  font-size: 2em;
+  font-size: 2.3em;
 }
 
 .ES6 {
@@ -102,7 +102,7 @@ body {
   font-weight: 400;
   top: 50%;
   left: 75%;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 .mysql {
@@ -111,7 +111,7 @@ body {
   font-weight: 400;
   top: 67%;
   left: 80%;
-  font-size: 3.2em;
+  font-size: 3.5em;
 }
 
 .api {
@@ -121,7 +121,7 @@ body {
   font-weight: 400;
   top: 30%;
   left: 15%;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 /* hr */
