--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,15 +1,33 @@
 .about-Wrapper {
   font-family: "Montserrat";
   color: var(--color-secondary);
+  height: 95vh;
   background-color: rgb(255, 255, 255);
+  padding-bottom: 3rem;
   text-align: center;
   position: relative;
   z-index: 5;
 }
 
+.skills-img {
+  margin-top: 0;
+  padding-top: 0;
+  margin-left: 5%;
+  float: left;
+}
+.about-container {
+  width: 80vw;
+  height: 70vh;
+  background-color: #fff;
+  position: absolute;
+  top: 10%;
+  left: 18%;
+  border-radius: 1.875rem;
+}
 .about-H1 {
+  margin-top: 3rem;
   margin-bottom: 2rem;
-  font-size: 4.7rem;
+  font-size: var(--secondary-font-size);
   font-weight: 800;
   text-align: center;
   padding-top: 1rem;
@@ -18,14 +36,47 @@
 
 .full-stop {
   padding: 0.5rem;
-  font-size: 4.7rem;
+  font-size: var(--secondary-font-size);
   color: var(--color-primary);
 }
 
 .about-info-text {
   width: 75%;
-  margin: auto;
-  font-size: 2rem;
+  margin: 0 auto 2rem auto;
+  font-size: var(--tertiary-font-size);
   padding-top: 1.4rem;
   font-weight: 200;
+}
+
+.about-button {
+  font-size: 1.5vw;
+  color: var(--color-secondary) !important;
+  outline: none !important;
+  text-decoration: underline;
+  text-underline-offset: 0.375rem;
+  box-shadow: none !important;
+  font-weight: 600;
+}
+
+.about-button:hover {
+  color: var(--color-accent) !important;
+}
+
+.skills-icon {
+  font-size: 1.7rem;
+}
+
+/*Smartphone, portrait tablets */
+
+@media (max-width: 600px) {
+  .about-Wrapper img {
+    display: none;
+  }
+
+  .about-container {
+    position: static;
+  }
+  .about-info-text {
+    width: 100%;
+  }
 }
