--- a/src/components/ContactForm/contactForm.css
+++ b/src/components/ContactForm/contactForm.css
@@ -2,71 +2,163 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: var(--primary-font-family);
+  position: relative;
+}
+
+.contact-col {
+  margin-left: 6%;
+  display: flex;
+  position: relative;
 }
 
 .contact-container {
-  padding: 0 !important;
-  height: 550px;
-  width: 800px;
-  background-color: rgb(255, 255, 255);
-  border-radius: 5%;
+  background-color: #fff;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  border-radius: 1.875rem;
+  border: 2px solid var(--color-secondary);
+  position: absolute;
+  top: 5%;
+  left: 18%;
 }
-
-.contact-img {
-  margin: 0 !important;
-  padding: 0 !important;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-top-left-radius: 5%;
-  border-bottom-left-radius: 5%;
-}
-
-.contact-col-8 {
-  border: 8px solid #6e77f4;
-  border-top-right-radius: 5%;
-  border-bottom-right-radius: 5%;
-}
-
-.form-title {
-  color: #3a3a3a;
-  font-size: 3rem;
-  padding: 1rem;
+.contact-container h1 {
+  margin: 2rem;
+  color: var(--color-secondary);
+  font-size: 5rem;
+  font-weight: 700;
   text-align: center;
 }
 
-.form-container {
-  position: relative;
+.input_group {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+form {
+  position: relative !important;
+}
+
+form input {
+  font-size: 1.2rem !important;
+  width: 320px !important;
+  border-radius: 1rem !important;
+  box-shadow: none !important;
+  border: 1px solid var(--color-secondary) !important;
+}
+
+.input_group label {
+  position: absolute !important;
+  top: 3%;
+  left: 4%;
+}
+textArea {
+  font-size: 1.2rem !important;
+  height: 10rem !important;
+  border-radius: 1rem !important;
+  box-shadow: none !important;
+  border: 1px solid var(--color-secondary) !important;
+}
+.textArea-group label {
+  position: absolute !important;
+  top: 3%;
+  left: 2%;
+}
+
+.input_group input:focus,
+.textArea-group textarea:focus {
+  font-size: 1.2rem;
+  outline: none !important;
+  border: 0.1rem solid var(--color-accent) !important;
+}
+
+.send-button {
+  margin: 1rem;
+  font-size: 2rem;
+  font-weight: 600;
+  float: right;
+}
+
+.send-button:hover {
+  color: var(--color-accent);
+}
+.send-button:focus {
+  outline: none !important;
+  text-decoration: none;
+  box-shadow: none;
+}
+
+@media (max-width: 1351.2px) {
+  .contact-container {
+    display: none;
+  }
+}
+
+/* .contact-container {
+  width: 60%;
+  height: 100%;
+  background-color: var(--color-primary);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+.form-title {
+  padding-top: 2rem;
+  color: var(--color-secondary);
+  font-size: var(--secondary-font-size);
+  font-weight: 700;
+  text-align: center;
 }
 
 .form-floating {
   margin: auto;
 }
 
+.form-container {
+  padding: 1.1rem 2rem 0 2rem;
+}
+
 .form-container input {
-  padding: 10px 0;
-  margin-bottom: 30px;
+  margin-top: 1.875rem !important;
 }
 
 .form-container textarea {
-  height: 100px !important;
-  padding: 10px 0;
-  margin-bottom: 40px;
-  border: 1px solid;
+  height: 9.375rem !important;
+  padding: 0.938rem 0;
+  margin-top: 1.875rem !important;
 }
 
 .form-container input,
 .form-container textarea {
-  width: 80%;
+  margin: auto;
+  width: 100%;
   box-sizing: border-box;
   box-shadow: none !important;
   outline: none !important;
-  border: none !important;
-  border-bottom: 2px solid #6e77f4 !important;
+  border: 2px solid var(--color-secondary);
 }
-@media (max-width: 1350px) {
-  .contact-wrapper {
-    display: none;
-  }
+.form-container input:focus,
+.form-container textarea:focus {
+  border: 2px solid var(--color-accent);
 }
+
+.form-container label {
+  color: var(--color-secondary);
+  font-weight: 500;
+}
+
+.send-button {
+  color: var(--color-secondary);
+  padding-top: 1.9rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+  float: right;
+}
+.send-button:hover {
+  color: var(--color-accent);
+}
+.send-button:focus {
+  outline: none !important;
+  text-decoration: none;
+  box-shadow: none;
+} */
