--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,8 +1,9 @@
 .home-Wrapper {
+  margin-bottom: 0;
+  padding-bottom: 0;
   background-size: cover;
   background-position: center;
   background-color: white;
-  margin-top: 3rem !important;
   height: 100vh;
   width: 100%;
   overflow: hidden;
@@ -16,13 +17,13 @@
   font-weight: 500;
   min-height: 31.25rem;
   align-items: center;
-  height: 75%;
+  height: 100%;
   width: 90%;
   justify-content: center;
   text-align: center;
   position: absolute;
   display: flex;
-  top: 44%;
+  top: 62%;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
@@ -31,13 +32,14 @@
 
 .backgrund-img {
   width: 100%;
-  height: 110%;
+  height: 100%;
   position: absolute;
   top: -10;
   left: 0;
   object-fit: cover;
   background-position: center center;
   background-repeat: no-repeat;
+  overflow: hidden;
   opacity: 0.08;
 }
 
@@ -51,7 +53,7 @@
 
 .intro-h3 {
   font-family: "Playfair Display", serif;
-  font-size: 2.2rem;
+  font-size: 2.5rem;
   color: var(--color-secondary);
   font-weight: bold;
   margin-top: 0;
@@ -63,9 +65,11 @@
 
 .intro-h2 {
   font-family: "Montserrat";
-  font-size: 5.5rem;
+  font-size: var(--primary-font-size);
   color: #fff;
   font-weight: 800;
+  margin-bottom: 0;
+  padding-bottom: 0;
   animation: paragraph-load 500ms ease-in
     calc(var(--article-load-delay) + 200ms);
   animation-fill-mode: forwards;
@@ -75,9 +79,11 @@
 
 .intro-h1 {
   font-family: "Montserrat";
-  font-size: 6.5rem;
+  font-size: var(--primary-font-size);
   color: #fff;
   font-weight: 800;
+  margin-top: 0;
+  padding-top: 0;
   animation: paragraph-load 500ms ease-in
     calc(var(--article-load-delay) + 400ms);
   animation-fill-mode: forwards;
@@ -86,7 +92,18 @@
 }
 
 @media (max-width: 700px) {
-  .intro-paragraph {
+  body {
+    width: 100vw;
+  }
+  .home-container {
+    width: 100vw;
+  }
+
+  .intro-h3 {
+    font-size: 8vw;
+  }
+  .intro-h2,
+  .intro-h1 {
     font-size: 14vw;
   }
 }
