--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -5,43 +5,110 @@ body {
 
 .skills-Wrapper {
   font-family: "Montserrat";
-  height: 60vh;
+  height: 95vh;
   position: relative;
   background-color: #fff;
   z-index: 5;
 }
 
-.skills-Header {
-  font-size: 4rem;
-  font-weight: 800;
+.skills-container {
+  margin: auto;
+  width: 90%;
+  height: 100%;
+  background: linear-gradient(90deg, #ffd324 66.7%, var(--color-primary) 33.3%);
+  position: relative;
+}
+
+.skills-title-container {
   color: var(--color-secondary);
   position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
+  top: 15%;
+  left: 8%;
+}
+
+.skills-slogan {
+  font-family: "Playfair Display", serif;
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+
+.skills-Header {
+  padding-top: 1rem;
+  font-size: var(--secondary-font-size);
+  font-weight: 800;
+}
+
+.full-stop2 {
+  padding: 0.5rem;
+  font-size: var(--secondary-font-size);
+  color: var(--color-accent);
+}
+
+.skills-title-container p {
+  width: 45%;
+  margin-top: 3rem;
+  font-size: var(--tertiary-font-size);
+  padding-top: 1.4rem;
+  font-weight: 200;
+}
+
+.skills-title-container p span {
+  font-weight: 500;
+  margin-right: 0.8rem;
 }
 
 .animation-container {
-  color: var(--color-primary);
-  opacity: 0.5;
+  height: 80%;
+  width: 50%;
+  background-color: #fff;
+  border-radius: 2%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  border: 2px solid var(--color-secondary);
+  position: absolute;
+  top: 10%;
+  right: 5%;
 }
 
+/*  Tags */
+
+.content {
+  display: block !important;
+  max-height: 100% !important;
+  max-width: 100% !important;
+  overflow: hidden !important;
+  opacity: 0.8;
+}
+
+.tagcloud {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.3rem;
+  font-weight: 600;
+  color: var(--color-primary);
+  margin: auto;
+  width: 50%;
+  cursor: pointer;
+}
+
+.tagcloud--item:hover {
+  color: var(--color-accent);
+}
+/* 
 .react {
   --i: 1;
   position: absolute;
-  top: 25%;
+  top: 30%;
   left: 40%;
-  font-size: 2.6em;
+  font-size: 3em;
 }
 
 .github {
   --i: 2;
   position: absolute;
   margin: 0;
-  top: 15%;
+  top: 13%;
   left: 25%;
-  font-size: 2.8em;
+  font-size: 3em;
 }
 
 .bootstrap {
@@ -55,8 +122,8 @@ body {
 .javascript {
   --i: 4;
   position: absolute;
-  top: 7%;
-  left: 82%;
+  top: 50%;
+  left: 50%;
   font-weight: 400;
   top: 3.125;
   font-size: 3.5em;
@@ -67,7 +134,7 @@ body {
   position: absolute;
   top: 60%;
   left: 10%;
-  font-size: 3em;
+  font-size: 3.3em;
 }
 
 .mongo {
@@ -75,7 +142,7 @@ body {
   position: absolute;
   top: 60%;
   left: 30%;
-  font-size: 2.2em;
+  font-size: 2.7em;
 }
 
 .node {
@@ -84,15 +151,22 @@ body {
   margin: 0;
   top: 75%;
   left: 45%;
-  font-size: 2.8em;
+  font-size: 3em;
 }
 
 .html {
   --i: 3;
   position: absolute;
-  top: 62%;
-  left: 63%;
-  font-size: 2.3em;
+  top: 7%;
+  left: 83%;
+  font-size: 2.5em;
+}
+
+.json {
+  position: absolute;
+  top: 28%;
+  left: 80%;
+  font-size: 2em;
 }
 
 .ES6 {
@@ -102,7 +176,7 @@ body {
   font-weight: 400;
   top: 50%;
   left: 75%;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .mysql {
@@ -115,18 +189,17 @@ body {
 }
 
 .api {
-  --i: 0;
   position: absolute;
   margin: 0;
   font-weight: 400;
   top: 30%;
   left: 15%;
-  font-size: 1.5rem;
-}
+  font-size: 1.2rem;
+} */
 
 /* hr */
 
-hr {
+/* hr {
   margin: 0rem auto 3rem auto;
   width: 80%;
   border: 0.1rem solid #000000;
@@ -140,10 +213,10 @@ hr {
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0);
-  width: 80%;
+  width: 84%;
   border: 0.1rem solid var(--color-secondary);
   opacity: 1;
-}
+} */
 
 @media (max-width: 600px) {
   .skills-Wrapper {
