--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -1,5 +1,27 @@
 :root {
   --color-primary: #ff6666;
   --color-secondary: #3a3a3a;
+  --color-tertiary: #ffd324;
   --color-accent: #6f77f4;
+  --primary-font-size: 6rem;
+  --secondary-font-size: 5.5rem;
+  --tertiary-font-size: 1.6rem;
+  --primary-font-family: font-family: "Montserrat";
+  --secondary-font-family: "Playfair Display", serif;
+  --tertiary-font-family: font-family: "Poppins", sans-serif;
+  --primary-font-weight: font-weight: 800;
+}
+
+.project-button {
+  font-size: 1.5rem;
+  color: var(--color-secondary) !important;
+  outline: none !important;
+  text-decoration: underline;
+  text-underline-offset: 0.375rem;
+  box-shadow: none !important;
+  font-weight: 600;
+}
+
+.project-button:hover {
+  color: var(--color-accent) !important;
 }
